[package]
name = "driver"
version = "0.1.0"
edition = "2021"
description = "bounded executor for tokio; limit the count of tasks running 🚦"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/redcloudvg/driver"
documentation = "https://docs.rs/driver"

[dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
