[package]
name = "rider"
version = "0.1.0"
edition = "2021"
description = "bounded executor for tokio; limit the count of tasks running 🚦"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/redcloudvg/rider"
documentation = "https://docs.rs/rider"
categories = ["concurrency"]

[dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
